src/objects/Vendor_Service_Review__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_From_Vendor_Meeting__c</fullName>
        <label>Notes From Vendor Meeting</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_for_Next_Review__c</fullName>
        <label>Scheduled Date for Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <referenceTo>Business_Contacts__c</referenceTo>
        <relationshipLabel>Vendor Service Reviews</relationshipLabel>
        <relationshipName>Vendor_Service_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Service Review</label>
    <nameField>
        <displayFormat>VSR{0000}</displayFormat>
        <label>Vendor Service Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Service Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>